--- a/details.html
+++ b/details.html
@@ -17,6 +17,7 @@
     <link rel="stylesheet" href="./add-cart.css">
     <link rel="stylesheet" href="./series.css">
     <link rel="stylesheet" href="./about-product.css">
+    <link rel="stylesheet" href="./details.css">
 </head>
 
 <body>
