--- a/specs.html
+++ b/specs.html
@@ -7,16 +7,16 @@
     <title>Document</title>
     <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500;600;700&display=swap"
         rel="stylesheet">
-    <link rel="stylesheet" href="./style.css">
-    <link rel="stylesheet" href="./discount.css">
-    <link rel="stylesheet" href="./about-us.css">
-    <link rel="stylesheet" href="./account.css">
-    <link rel="stylesheet" href="./shopping.css">
-    <link rel="stylesheet" href="./Dashboard.css">
-    <link rel="stylesheet" href="./add-cart.css">
-    <link rel="stylesheet" href="./series.css">
-    <link rel="stylesheet" href="./about-product.css">
-    <link rel="stylesheet" href="./specs.css">
+    <link rel="stylesheet" href="./styles/style.css">
+    <link rel="stylesheet" href="./styles/discount.css">
+    <link rel="stylesheet" href="./styles/about-us.css">
+    <link rel="stylesheet" href="./styles/account.css">
+    <link rel="stylesheet" href="./styles/shopping.css">
+    <link rel="stylesheet" href="./styles/Dashboard.css">
+    <link rel="stylesheet" href="./styles/add-cart.css">
+    <link rel="stylesheet" href="./styles/series.css">
+    <link rel="stylesheet" href="./styles/about-product.css">
+    <link rel="stylesheet" href="./styles/specs.css">
 </head>
 
 <body>
@@ -921,7 +921,7 @@
                     <div class="bg-blue">
                         <img src="./images/support.png" alt="support">
                     </div>
-                    <h4>Product Support</h4>
+                    <h4 class="bold-font">Product Support</h4>
                     <p class="banking-info">Up to 3 years on-site warranty
                         available for your peace of mind.</p>
                 </div>
@@ -929,7 +929,7 @@
                     <div class="bg-blue">
                         <img src="./images/account.png" alt="account">
                     </div>
-                    <h4>Personal Account</h4>
+                    <h4 class="bold-font">Personal Account</h4>
                     <p class="banking-info">With big discounts, free delivery
                         and a dedicated support specialist.</p>
                 </div>
@@ -937,7 +937,7 @@
                     <div class="bg-blue">
                         <img src="./images/saving.png" alt="savings">
                     </div>
-                    <h4>Amazing Savings</h4>
+                    <h4 class="bold-font">Amazing Savings</h4>
                     <p class="banking-info">Up to 70% off new Products, you can
                         be sure of the best price.</p>
                 </div>
