--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500;600;700&display=swap"
         rel="stylesheet">
 
-    <link rel="stylesheet" href="./style.css">
+    <link rel="stylesheet" href="./styles/style.css">
 
 </head>
 
@@ -1464,21 +1464,21 @@
                 <div class="bg-blue">
                     <img src="./images/support.png" alt="support">
                 </div>
-                <h4>Product Support</h4>
+                <h4 class="bold-font">Product Support</h4>
                 <p class="banking-info">Up to 3 years on-site warranty available for your peace of mind.</p>
             </div>
             <div class="card-flex-col">
                 <div class="bg-blue">
                     <img src="./images/account.png" alt="account">
                 </div>
-                <h4>Personal Account</h4>
+                <h4 class="bold-font">Personal Account</h4>
                 <p class="banking-info">With big discounts, free delivery and a dedicated support specialist.</p>
             </div>
             <div class="card-flex-col">
                 <div class="bg-blue">
                     <img src="./images/saving.png" alt="savings">
                 </div>
-                <h4>Amazing Savings</h4>
+                <h4 class="bold-font">Amazing Savings</h4>
                 <p class="banking-info">Up to 70% off new Products, you can be sure of the best price.</p>
             </div>
         </section>
