--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Online Store</title>
     <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link rel="preconnect" href="https://fonts. gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500;600;700&display=swap"
         rel="stylesheet">
 
@@ -856,7 +856,7 @@
         </section>
         <section class="custom_build_series">
 
-            <div class="available-cards flx-btwn">
+            <div class="available-cards flx-start">
                 <div class="product-catalog flx-col bg-img-one">
                     <h2>Custome
                         Builds</h2>
@@ -969,20 +969,21 @@
             </div>
         </section>
 
+        <section class="Series_lists">
 
-        <section class="msi_laptops_series flx-col-start">
-            <div class="Series_lists">
+            <ul class="FLx">
+                <li class="series-list"><a href="#">MSI GS Series</a></li>
+                <li class="series-list"><a href="#">MSI GT Series</a></li>
+                <li class="series-list"><a href="#">MSI GL Series</a></li>
+                <li class="series-list"><a href="#">MSI GE Series</a></li>
+            </ul>
 
-                <ul class="FLx">
-                    <li class="series-list"><a href="#">MSI GS Series</a></li>
-                    <li class="series-list"><a href="#">MSI GT Series</a></li>
-                    <li class="series-list"><a href="#">MSI GL Series</a></li>
-                    <li class="series-list"><a href="#">MSI GE Series</a></li>
-                </ul>
+        </section>
+        <section class="msi_laptop_series flx-col-start">
 
-            </div>
 
-            <div class="available-cards flx-btwn">
+
+            <div class="available-cards flx-start">
 
                 <div class="flx-col bg-img-two">
                     <h2>MSI
@@ -1094,19 +1095,20 @@
             </div>
         </section>
 
-        <section class="Descktop_series flx-col-start">
-            <div class="Series_lists">
+        <section class="Series_lists">
 
-                <ul class="FLx">
-                    <li class="series-list"><a href="#">MSI Infinute Series</a></li>
-                    <li class="series-list"><a href="#">MSI Triden</a></li>
-                    <li class="series-list"><a href="#">MSI GL Series</a></li>
-                    <li class="series-list"><a href="#">MSI Nightblade</a></li>
-                </ul>
+            <ul class="FLx">
+                <li class="series-list"><a href="#">MSI Infinute Series</a></li>
+                <li class="series-list"><a href="#">MSI Triden</a></li>
+                <li class="series-list"><a href="#">MSI GL Series</a></li>
+                <li class="series-list"><a href="#">MSI Nightblade</a></li>
+            </ul>
 
-            </div>
+        </section>
+        <section class="Descktop_series">
 
-            <div class="available-cards flx-btwn">
+
+            <div class="available-cards flx-start">
 
                 <div class="flx-col bg-img-three">
                     <h2>Desktops</h2>
@@ -1216,8 +1218,8 @@
                 </div>
             </div>
         </section>
-        <section class="Msi_series margn-top">
-            <div class="available-cards flx-btwn">
+        <section class="Msi_series">
+            <div class="available-cards flx-start">
 
                 <div class="flx-col bg-img-four">
                     <h2>Gaming
