--- a/add-cart.html
+++ b/add-cart.html
@@ -723,10 +723,10 @@
                 <div class="selects-flx-gap">
                     <div class="select flx">
 
-                        <p class="select-p  gray">Sort By:</p>
+                        <label for="pages-one" class="select-p  gray">Sort By:</label>
 
 
-                        <select>
+                        <select id="pages-one">
 
                             <option>Position</option>
                             <option value="1">page-one</option>
@@ -739,9 +739,9 @@
                     </div>
 
                     <div class="select flx">
-                        <p class="select-p gray">Show:</p>
+                        <label for="pages-two" class="select-p gray">Show:</label>
 
-                        <select class="select-width">
+                        <select id="pages-two" class="select-width">
                             <option>35 per page</option>
                             <option value="1">page-one</option>
                             <option value="2">page-two</option>
