--- a/checkout.html
+++ b/checkout.html
@@ -794,16 +794,17 @@
                         <label for="number">Phone Number<span class="red-colr">*</span></label>
                         <input class="input" type="text">
                     </div>
-                    <label for="radio-one">Standard Rate</label>
+                    <p>Standard Rate</p>
                     <div class="radio-flx">
                         <div class="flex">
                             <div class="input-radio">
                                 <input type="radio" name="radio" id="radio-one" checked class="radio">
                             </div>
                             <div class="radio-p">
-                                <p class="black-clr">Price may vary depending on the item/destination. Shop Staff
+                                <label for="" class="black-clr">Price may vary depending on the item/destination. Shop
+                                    Staff
                                     will
-                                    contact you. $21.00</p>
+                                    contact you. $21.00</label>
                             </div>
                         </div>
 
@@ -811,14 +812,14 @@
 
 
                     </div>
-                    <label for="radio-two">Pickup from store</label>
+                    <p>Pickup from store</p>
                     <div class="radio-flx">
                         <div class="flex">
                             <div class="input-radio">
                                 <input type="radio" name="radio" id="radio-two" class="radio">
                             </div>
                             <div class="radio-p">
-                                <p class="black-clr">1234 Street Adress City Address, 1234</p>
+                                <label for="radio-two" class="black-clr">1234 Street Adress City Address, 1234</label>
                             </div>
                         </div>
                         <strong>$0.00</strong>
