--- a/checkout.html
+++ b/checkout.html
@@ -795,32 +795,36 @@
                         <input class="input" type="text">
                     </div>
                     <p>Standard Rate</p>
+
+
                     <div class="radio-flx">
                         <div class="flex">
-                            <div class="input-radio">
-                                <input type="radio" name="radio" id="radio-one" checked class="radio">
-                            </div>
-                            <div class="radio-p">
-                                <label for="" class="black-clr">Price may vary depending on the item/destination. Shop
-                                    Staff
-                                    will
-                                    contact you. $21.00</label>
-                            </div>
+                            <input type="radio" name="radio" id="radio-one" checked class="radio">
+
+
+                            <label for="radio-one" class="radio-label">Price may vary depending on the
+                                item/destination. Shop
+                                Staff
+                                will
+                                contact you. $21.00</label>
+
                         </div>
 
                         <strong>$21.00</strong>
-
-
                     </div>
+
+
+
                     <p>Pickup from store</p>
                     <div class="radio-flx">
                         <div class="flex">
-                            <div class="input-radio">
-                                <input type="radio" name="radio" id="radio-two" class="radio">
-                            </div>
-                            <div class="radio-p">
-                                <label for="radio-two" class="black-clr">1234 Street Adress City Address, 1234</label>
-                            </div>
+
+                            <input type="radio" name="radio" id="radio-two" class="radio">
+
+
+                            <label for="radio-two" class="radio-label">1234 Street Adress City Address,
+                                1234</label>
+
                         </div>
                         <strong>$0.00</strong>
                     </div>
