--- a/series.html
+++ b/series.html
@@ -681,9 +681,9 @@
                     </nav>
                 </div>
                 <div class="client-actions">
-                    <a href="" class="grow"><img src="./images/search.png" alt="search"></a>
-                    <a href=""><img src="./images/shop.png" alt="shop"></a>
-                    <a href=""><img src="./images/client.png" alt="client"></a>
+                    <a href="#" class="grow"><img src="./images/search.png" alt="search"></a>
+                    <a href="#"><img src="./images/shop.png" alt="shop"></a>
+                    <a href="#"><img src="./images/client.png" alt="client"></a>
                 </div>
             </div>
         </div>
@@ -722,10 +722,10 @@
                 <div class="selects-flx-gap">
                     <div class="select flx">
 
-                        <p class="select-p  gray">Sort By:</p>
+                        <label for="select" class="select-p  gray">Sort By:</label>
 
 
-                        <select>
+                        <select id="select">
 
                             <option>Position</option>
                             <option value="1">page-one</option>
@@ -738,9 +738,9 @@
                     </div>
 
                     <div class="select flx">
-                        <p class="select-p gray">Show:</p>
+                        <label for="select-two" class="select-p gray">Show:</label>
 
-                        <select class="select-width">
+                        <select id="select-two" class="select-width">
                             <option>35 per page</option>
                             <option value="1">page-one</option>
                             <option value="2">page-two</option>
