--- a/specs.html
+++ b/specs.html
@@ -694,9 +694,13 @@
         <section class="about-products bordr-bottm">
             <div class="container flx-btwn">
                 <div class="about FLx">
-                    <p class="font grey hovr-bordr">About Product</p>
-                    <p class="font grey hovr-bordr">Details</p>
-                    <p class="font bordr-blue">Specs</p>
+                    <a href="file:///C:/Users/21266/Documents/GitHub/online-store/about-product.html" target="_blank"
+                        class="font bordr-blue">About Product</a>
+                    <a target="_blank" href="file:///C:/Users/21266/Documents/GitHub/online-store/details.html"
+                        class="font grey hovr-bordr">Details</a>
+                    <a target="_blank" href="file:///C:/Users/21266/Documents/GitHub/online-store/specs.html"
+                        class="font grey hovr-bordr">Specs</a>
+
                 </div>
 
                 <div class="sale FLx">
