--- a/details.html
+++ b/details.html
@@ -696,9 +696,9 @@
             <div class="container flx-btwn">
                 <div class="about FLx">
                     <a href="file:///C:/Users/21266/Documents/GitHub/online-store/about-product.html" target="_blank"
-                        class="font bordr-blue">About Product</a>
+                        class="font grey hovr-bordr ">About Product</a>
                     <a target="_blank" href="file:///C:/Users/21266/Documents/GitHub/online-store/details.html"
-                        class="font grey hovr-bordr">Details</a>
+                        class="font bordr-blue">Details</a>
                     <a target="_blank" href="file:///C:/Users/21266/Documents/GitHub/online-store/specs.html"
                         class="font grey hovr-bordr">Specs</a>
 
@@ -983,7 +983,9 @@
                         <li class="footer-list"><a href="">Privacy
                                 Policy</a></li>
                         <li class="footer-list"><a href="">Search</a></li>
-                        <li class="footer-list"><a href="">Terms</a></li>
+                        <li class="footer-list"><a
+                                href="file:///C:/Users/21266/Documents/GitHub/online-store/conditions.html"
+                                target="_blank">Terms</a></li>
                         <li class="footer-list"><a href="">Orders and
                                 Returns</a></li>
                         <li class="footer-list"><a href="">Contact Us</a>
