--- a/about-product.html
+++ b/about-product.html
@@ -55,7 +55,9 @@
                 </div>
 
                 <div class="header-address">
-                    <p class="gray">Visit our showroom in 1234 Street Adress City Address, 1234 <a href="#">Contact
+                    <p class="gray">Visit our showroom in 1234 Street Adress City Address, 1234 <a
+                            href="file:///C:/Users/21266/Documents/GitHub/online-store/contact.html"
+                            target="_blank">Contact
                             Us</a></p>
                 </div>
 
@@ -965,7 +967,10 @@
                         <li class="footer-list"><a href="">Privacy
                                 Policy</a></li>
                         <li class="footer-list"><a href="">Search</a></li>
-                        <li class="footer-list"><a href="">Terms</a></li>
+                        <li class="footer-list"><a
+                                href="file:///C:/Users/21266/Documents/GitHub/online-store/conditions.html"
+                                target="_blank">Terms</a>
+                        </li>
                         <li class="footer-list"><a href="">Orders and
                                 Returns</a></li>
                         <li class="footer-list"><a href="">Contact Us</a>
