--- a/account.html
+++ b/account.html
@@ -783,7 +783,9 @@
                         <li class="footer-list"><a href="">Privacy
                                 Policy</a></li>
                         <li class="footer-list"><a href="">Search</a></li>
-                        <li class="footer-list"><a href="">Terms</a></li>
+                        <li class="footer-list"><a
+                                href="file:///C:/Users/21266/Documents/GitHub/online-store/conditions.html"
+                                target="_blank">Terms</a></li>
                         <li class="footer-list"><a href="">Orders and
                                 Returns</a></li>
                         <li class="footer-list"><a href="">Contact Us</a>
