--- a/discount.html
+++ b/discount.html
@@ -820,16 +820,18 @@
                         <label for="radio-1">Standard Rate</label>
                         <div class="flx-start margn-top">
                             <input class="radio" type="radio" name="radio" checked id="radio-1">
-                            <p class="shipping-p black-clr">Price may vary depending on the item/destination. Shop Staff
+                            <label for="radio-1" class="shipping-p black-clr">Price may vary depending on the
+                                item/destination. Shop Staff
                                 will
-                                contact you. $21.00</p>
+                                contact you. $21.00</label>
                         </div>
                     </div>
                     <div class="radios">
                         <label for="radio-2">Pickup from store</label>
                         <div class="flx margn-top">
                             <input class="radio" type="radio" name="radio" id="radio-2">
-                            <p class="shipping-p black-clr">1234 Street Adress City Address, 1234 $0.00</p>
+                            <label for="radio-2" class="shipping-p black-clr">1234 Street Adress City Address, 1234
+                                $0.00</label>
                         </div>
                     </div>
                     <h4 class="select-img select-two">Apply Discount Code</h4>
