--- a/index.html
+++ b/index.html
@@ -97,7 +97,9 @@
                                                             (7)</a></li>
                                                 </ul>
                                             </li>
-                                            <li class="hovr-list"><a class="nav-link" href="#">MSI
+                                            <li class="hovr-list"><a class="nav-link"
+                                                    href="file:///C:/Users/21266/Documents/GitHub/online-store/series.html"
+                                                    target="_blank">MSI
                                                     Prestige
                                                     Series</a>
                                             </li>
@@ -116,7 +118,8 @@
                                                     Series</a>
 
                                             </li>
-                                            <li class="hovr-list mini-list-two"><a class="nav-link" href="#">MSI
+                                            <li class="hovr-list mini-list-two"><a class="nav-link"
+                                                    href="file:///C:/Users/21266/Documents/GitHub/online-store/series.html">MSI
                                                     Prestige
                                                     Series <img class="drop" src="./images/drop-down.png" alt=""></a>
                                                 <ul class="sub-sub-sub-ul">
